--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://java.sun.com/xml/ns/javaee" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" id="WebApp_ID" version="2.5">
-  <display-name>DocTigerSF</display-name>
+  <display-name>DocTigerSFCore</display-name>
   <welcome-file-list>
     <welcome-file>index.html</welcome-file>
     <welcome-file>index.htm</welcome-file>
@@ -70,5 +70,15 @@
   <servlet-mapping>
     <servlet-name>pdffromurl</servlet-name>
     <url-pattern>/pdffromurl</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <description></description>
+    <display-name>DocGenServtest12</display-name>
+    <servlet-name>DocGenServtest12</servlet-name>
+    <servlet-class>com.doc.servlets.DocGenServtest12</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>DocGenServtest12</servlet-name>
+    <url-pattern>/DocGenServtest12</url-pattern>
   </servlet-mapping>
 </web-app>
