--- a/src/config.properties
+++ b/src/config.properties
@@ -1,12 +1,12 @@
 #ftl_loc=D:\\pallavi\\1_MQ_PROJECTS_FINAL\\New folder (4)\\DocGeneration\\src\\
-ftl_loc=/home/ubuntu/apache-tomcat-8.5.31/webapps/DocTigerSF/WEB-INF/classes
+ftl_loc=/home/ubuntu/apache-tomcat-8.5.31/webapps/DocTigerSFCOre/WEB-INF/classes
 #doc_loc=D:\\docgenlocal\\
 doc_loc=/home/ubuntu/apache-tomcat-8.5.31/webapps/ROOT/
 
-doc_loc_ip=http://35.188.238.145:8080/
+doc_loc_ip=http://35.243.163.58:8080/
 qr_loc=/home/ubuntu/apache-tomcat-8.5.31/webapps/ROOT/images/qrcode/
 #qr_loc=D:\\MQ\\QRCode\\images\\
-qr_loc_ip=http://35.188.238.145:8080/images/qrcode/
+qr_loc_ip=http://35.243.163.58:8080/images/qrcode/
 #uploaded_templates_path=C:\\upoaded-templates\\
 #uploaded_templates_json=C:\\upoaded-templates\\uploadedTemplates.json
 uploaded_templates_path=/home/ubuntu/SFuploaded-templates/
@@ -15,13 +15,16 @@ uploaded_templates_json=/home/ubuntu/SFuploaded-templates/uploadedTemplates.json
 #openoffice_path=C:\\Program Files (x86)\\OpenOffice 4
 openoffice_path=/opt/openoffice4
 Doctigerruleclause=http://35.201.178.201:8082/portal/servlet/service/executeRule
-convertorServiceUrl=http://35.188.238.145:8082/convertDocxToPdf
-saveurlfrompdf=http://35.188.238.145:8082/downloadFile
-Slingserverfilepath=/home/ubuntu/apache-tomcat-8.5.31/webapps/ROOT/TemplateLibraryAdvanced/
+convertorServiceUrl=http://35.243.163.58:8082/convertDocxToPdf
+saveurlfrompdf=http://35.243.163.58:8082/downloadFile
+Slingserverfilepath=/usr/local/tomcat8/apache-tomcat-8.5.35/webapps/ROOT/TemplateLibraryAdvanced/
 #Slingserverfilepath=/home/vil/sling\\ tomcat/apache-tomcat-6.0.35/webapps/ROOT/TemplateLibraryAdvance/"
 applicationId=4f909e42-64ec-479e-9cd5-8c07f71b45fd
 secretKey=0515f105-ea44-48b8-a32b-7416b14f0d8f
-
+currentIp=35.243.163.58
+SFservIP=35.200.169.114
+SFservusername=root
+SFservpass=B!zL3M786
 
 
 
