--- a/src/log4j.properties
+++ b/src/log4j.properties
@@ -12,8 +12,8 @@ log4j.appender.stdout.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %p %c{1} 
 # Direct log messages to a log file
 log4j.appender.file=org.apache.log4j.RollingFileAppender
 #log4j.appender.file.File=C:\\logs\\DialogService.log
-#log4j.appender.file.File=/home/ubuntu/apache-tomcat-8.5.31/logs/DocTigerSF.log
-log4j.appender.file.File=${catalina.home}/logs/DocTigerSF.log
+#log4j.appender.file.File=/home/ubuntu/apache-tomcat-8.5.31/logs/DocTigerSFCore.log
+log4j.appender.file.File=${catalina.home}/logs/DocTigerSFCore.log
 log4j.appender.file.MaxFileSize=100MB
 log4j.appender.file.MaxBackupIndex=10
 log4j.appender.file.layout=org.apache.log4j.PatternLayout
