commit by Tejal

--- a/src/config.properties
+++ b/src/config.properties
@@ -26,7 +26,7 @@ SFservIP=35.200.169.114
 SFservusername=root
 SFservpass=B!zL3M786
 
-
+#new
 
 
 #ftl_loc=D:\\pallavi\\1_MQ_PROJECTS_FINAL\\New folder (4)\\DocGeneration\\src\\
