Production IP added commit by Tejal.

--- a/src/config.properties
+++ b/src/config.properties
@@ -22,7 +22,7 @@ Slingserverfilepath=/usr/local/tomcat8/apache-tomcat-8.5.35/webapps/ROOT/Templat
 applicationId=4f909e42-64ec-479e-9cd5-8c07f71b45fd
 secretKey=0515f105-ea44-48b8-a32b-7416b14f0d8f
 currentIp=35.243.163.58
-SFservIP=35.200.169.114
+SFservIP=prod.bizlem.io
 SFservusername=root
 SFservpass=B!zL3M786
 
