--- a/src/config.properties
+++ b/src/config.properties
@@ -24,7 +24,7 @@ secretKey=0515f105-ea44-48b8-a32b-7416b14f0d8f
 currentIp=35.243.163.58
 SFservIP=prod.bizlem.io
 SFservusername=root
-SFservpass=B!zL3M786
+SFservpass=production@123_bizlem_17may
 
 #new
 
