commit by Tejal attachment path changed

--- a/src/config.properties
+++ b/src/config.properties
@@ -1,7 +1,7 @@
 #ftl_loc=D:\\pallavi\\1_MQ_PROJECTS_FINAL\\New folder (4)\\DocGeneration\\src\\
 ftl_loc=/home/ubuntu/apache-tomcat-8.5.31/webapps/DocTigerSFCOre/WEB-INF/classes
 #doc_loc=D:\\docgenlocal\\
-doc_loc=/home/ubuntu/apache-tomcat-8.5.31/webapps/ROOT/
+doc_loc=/home/ubuntu/apache-tomcat-8.5.31/webapps/ROOT/Attachment/
 
 doc_loc_ip=http://35.243.163.58:8080/
 qr_loc=/home/ubuntu/apache-tomcat-8.5.31/webapps/ROOT/images/qrcode/
@@ -25,6 +25,7 @@ currentIp=35.243.163.58
 SFservIP=35.200.169.114
 SFservusername=root
 SFservpass=production@123_bizlem
+attachmentpath=/home/ubuntu/apache-tomcat-8.5.31/webapps/ROOT/Attachment/
 #B!zL3M786
 
 #new
