--- a/src/config.properties
+++ b/src/config.properties
@@ -1,12 +1,12 @@
 #ftl_loc=D:\\pallavi\\1_MQ_PROJECTS_FINAL\\New folder (4)\\DocGeneration\\src\\
-ftl_loc=/home/ubuntu/apache-tomcat-8.5.31/webapps/DocTigerSFCOre/WEB-INF/classes
+ftl_loc=/home/ubuntu/generationTomcat/apache-tomcat-8.5.41/webapps/DocTigerSFCOre/WEB-INF/classes
 #doc_loc=D:\\docgenlocal\\
-doc_loc=/home/ubuntu/apache-tomcat-8.5.31/webapps/ROOT/Attachment/
+doc_loc=/home/ubuntu/generationTomcat/apache-tomcat-8.5.41/webapps/ROOT/Attachment/
 
-doc_loc_ip=http://35.243.163.58:8080/
-qr_loc=/home/ubuntu/apache-tomcat-8.5.31/webapps/ROOT/images/qrcode/
+doc_loc_ip=http://development.bizlem.io:8085/
+qr_loc=/home/ubuntu/generationTomcat/apache-tomcat-8.5.41/webapps/ROOT/images/qrcode/
 #qr_loc=D:\\MQ\\QRCode\\images\\
-qr_loc_ip=http://35.243.163.58:8080/images/qrcode/
+qr_loc_ip=http://development.bizlem.io:8082/images/qrcode/
 #uploaded_templates_path=C:\\upoaded-templates\\
 #uploaded_templates_json=C:\\upoaded-templates\\uploadedTemplates.json
 uploaded_templates_path=/home/ubuntu/SFuploaded-templates/
