commitby Tejal image generation added

--- a/src/config.properties
+++ b/src/config.properties
@@ -27,7 +27,7 @@ SFservusername=root
 SFservpass=production@123_bizlem
 attachmentpath=/home/ubuntu/apache-tomcat-8.5.31/webapps/ROOT/Attachment/
 #B!zL3M786
-
+Imagepathforlink=/home/ubuntu/generationTomcat/apache-tomcat-8.5.41/webapps/ROOT/Images/
 #new
 
 
