commit by Tejal image generation added

--- a/src/config.properties
+++ b/src/config.properties
@@ -25,6 +25,7 @@ currentIp=35.243.163.58
 SFservIP=prod.bizlem.io
 SFservusername=root
 SFservpass=production@123_bizlem_17may
+Imagepathforlink=/home/ubuntu/generationTomcat/apache-tomcat-8.5.41/webapps/ROOT/Images/
 
 #new
 
